// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters can be aliased 1`] = `
Object {
  "filename": "filter-aliases.test.js",
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "filename": "filter-aliases.test.js",
        "line": 2,
        "nodes": Array [
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "filter-aliases.test.js",
              "line": 3,
              "nodes": Array [
                Object {
                  "column": 5,
                  "filename": "filter-aliases.test.js",
                  "line": 4,
                  "type": "Text",
                  "val": "Filters can be aliased.",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "filter-aliases.test.js",
            "line": 3,
            "name": "aliased",
            "type": "Text",
            "val": "BEGIN ALIASED
Filters can be aliased.
END ALIASED",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "filter-aliases.test.js",
      "isInline": false,
      "line": 2,
      "name": "p",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`options are applied before aliases 1`] = `
Object {
  "filename": "filter-aliases.test.js",
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "filename": "filter-aliases.test.js",
        "line": 2,
        "nodes": Array [
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "filter-aliases.test.js",
              "line": 3,
              "nodes": Array [
                Object {
                  "column": 5,
                  "filename": "filter-aliases.test.js",
                  "line": 4,
                  "type": "Text",
                  "val": "Will be wrapped.",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "filter-aliases.test.js",
            "line": 3,
            "name": "check-options",
            "type": "Text",
            "val": "CHECKED
Will be wrapped.
END CHECKED",
          },
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "filter-aliases.test.js",
              "line": 5,
              "nodes": Array [
                Object {
                  "column": 5,
                  "filename": "filter-aliases.test.js",
                  "line": 6,
                  "type": "Text",
                  "val": "Will not be wrapped.",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "filter-aliases.test.js",
            "line": 5,
            "name": "aliased",
            "type": "Text",
            "val": "Will not be wrapped.",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "filter-aliases.test.js",
      "isInline": false,
      "line": 2,
      "name": "script",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`we do not support chains of aliases 1`] = `
Object {
  "code": "PUGNEUM:FILTER_ALIAS_CHAIN",
  "message": "filter-aliases.test.js:3:3

The filter \\"aliased-again\\" is an alias for \\"aliased\\", which is an alias for \\"alias\\".  pugneum does not support chains of filter aliases.",
}
`;
